bug cause by high refresh rate set to 240 so we can get this shit out there